[package]
name = "dshot1200"
version = "0.1.0"
authors = ["Alexander Zhuravlev"]

[dependencies]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false
codegen-units = 1
incremental = false

[dependencies.panic-abort]
version = "0.1.1"

[dependencies.cortex-m]
version = "0.4.3"

[dependencies.stm32f103xx]
version = "0.9.0"
features = ["rt"]

[dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
